# wgpu-practice

./: Cargo.toml
src/: main.rs  shader.wgsl
src/core/: camera.rs  instance.rs  mesh.rs  mod.rs  polygon.rs  state.rs  texture.rs  vertex.rs
src/ui/: game_loop.rs  window.rs
