[package]
name = "wgpu-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
bytemuck = { version = "1.12", features = [ "derive" ] }
rand = "0.8"

image = { version = "0.24", features = ["png", "jpeg"]}
anyhow = "1.0"
